# package_json_parser

./: AGENT.md  Cargo.toml  README.md  README.zh-CN.md  design.md  schema.json
fixtures/: author-object.json  bugs-object.json  bugs-url-string.json  package_manager.json  package_manager_fail.json  publish_config.json  publish_config_fail.json  version-package.json
src/: access.rs  bugs.rs  case.rs  directories.rs  engines.rs  err.rs  err_fancy.rs  lib.rs  license.rs  main.rs  name.rs  package_manager.rs  person.rs  publish_config.rs  repository.rs  type.rs  utils.rs  validator.rs  version.rs
src/def/: bin.rs  bugs.rs  contributors.rs  cpu.rs  dependencies.rs  description.rs  dev_dependencies.rs  directories.rs  engine_strict.rs  engines.rs  files.rs  home_page.rs  keywords.rs  license.rs  main.rs  maintainers.rs  man.rs  mod.rs  module.rs  name.rs  optional_dependencies.rs  os.rs  package_manager.rs  peer_dependencies.rs  person.rs  private.rs  publish_config.rs  readme.rs  repository.rs  scripts.rs  type.rs  types.rs  typings.rs  version.rs
src/ext/: diagnostic.rs  mod.rs  range.rs  validator.rs
src/validation/: field.rs  issue.rs  mod.rs  options.rs  report.rs
tests/: author.rs  bin_to_hash_map.rs  bugs.rs  contributors.rs  description.rs  deserialize_type_mismatch.rs  files.rs  homepage.rs  keywords.rs  license.rs  main.rs  maintainers.rs  name.rs  name_test.rs  package_manager.rs  parse_error_messages.rs  publish_config.rs  registry.rs  type.rs  user_usage_scenarios.rs  validation_policy.rs  version.rs
