[package]
name = "package_json_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "package_json_parser"
path = "src/main.rs"

[dependencies]
rustc-hash    = { version = "2.1.1" }
schemafy_lib = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
typed-builder = { version = "0.21.0" }
lazy-regex = "3.4.1"
