[package]
edition = "2024"
name    = "package_json_parser"
version = "0.0.2"
include     = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
license     = "MIT"
keywords    = ["package", "json", "parser"]
authors     = ["ityuany <519495771@qq.com>"]
description = "A parser for package.json"
repository  = "https://github.com/ityuany/package_json_parser"
categories  = ["parser-implementations", "development-tools"]

[dependencies]
lazy-regex  = "3.4.1"
rustc-hash  = { version = "2.1.1" }
serde       = { version = "1.0.215", features = ["derive"] }
serde_json  = "1.0.105"
serde_valid = "1.0.5"
thiserror   = "2.0.12"
